force-app/main/default/objects/PDFEngine_Config__c/PDFEngine_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PDFEngine Config</label>
</CustomObject>