force-app/main/default/objects/PDFEngine_Config__c/fields/File_Upload_Url__c.field-meta.xml
<CustomField>
    <fullName>File_Upload_Url__c</fullName>
    <label>File Upload Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>