force-app/main/default/objects/PDFEngine_Config__c/fields/Google_Api_Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Google_Api_Token_Url__c</fullName>
    <label>Google Api Token Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>