force-app/main/default/objects/PDFEngine_Config__c/fields/Google_Auth_Url__c.field-meta.xml
<CustomField>
    <fullName>Google_Auth_Url__c</fullName>
    <label>Google Auth Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>