force-app/main/default/objects/PDFEngine_Config__c/fields/Return_Url__c.field-meta.xml
<CustomField>
    <fullName>Return_Url__c</fullName>
    <label>Return Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>